# TaskDev

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 2025_08_08_2350-47b922dbc465_create_task_table.py  2025_08_15_1918-e8a17b3fcdb8_migration_for_user_table.py  2025_08_15_1925-06b1619d383e_migration_for_user_table_edit.py  35cf77e6cbac_create_tasks_and_users_tables.py  3ab3023b48d5_create_access_tokens_table.py  468804e004a1_create_tasks_and_users_tables.py  560919d29fe7_edit_name_table_user_to_users.py  66ceb3e4aa2f_create_tasks_and_users_table.py  ab618424376f_create_tables_for_user_and_tasks.py  affb19b49818_add_user_id_to_tasks.py  d4909c00cdf4_edit_password_to_hashed_password.py
api/: tasks.py  users.py
core/: config.py
core/Dependencies/: access_tokens.py  auth.py  strategy.py  tasks.py  users.py
core/authentication/: auth_backend.py  manage_auth.py  strategy.py  transport.py
core/models/: access_token.py  base.py  db_helper.py  tasks.py  users.py
core/schemas/: tasks.py  users.py
crud/: tasks.py  users.py
tests/: conftest.py  test_api_tasks.py  test_crud_tasks.py
utils/: jwt_auth.py
